--- a/crates/priv-helper/Cargo.toml
+++ b/crates/priv-helper/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
-name = "priv-helper"
+name = "raidhos-priv-helper"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+raidhos-core = { path = "../core" }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
